[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example-pkg-gunhoon"
version = "0.1.1"
authors = [
  { name="Gunhoon Lee", email="gunhoon@gmail.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gunhoon/packaging-tutorial"
"Bug Tracker" = "https://github.com/gunhoon/packaging-tutorial/issues"
